<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rootView"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="match_parent">

        <ImageView
                android:layout_width="50dp"
                android:padding="10dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_share_black_24dp"
                android:id="@+id/imageShare"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
                android:layout_width="50dp"
                android:padding="10dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_clear_black_24dp"
                android:id="@+id/imageClose"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="Office Assistant Job - "
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvJobTitle"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/imageCompanyLogo" app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageShare"
                android:layout_marginStart="16dp"/>

        <ImageView android:id="@+id/imageCompanyLogo"
                   android:background="@color/white"
                   android:layout_width="60dp"
                   android:layout_height="60dp"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toTopOf="@+id/tvJobTitle" android:layout_marginEnd="16dp"/>

        <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:text="Digital Marketing Pvt. Ltd."
                android:id="@+id/tvCompanyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/tvJobTitle"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/imageCompanyLogo" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/tvJobTitle" android:layout_marginTop="16dp"/>

        <TextView
                android:gravity="center"
                android:drawableStart="@drawable/ic_outline_location_on_24px"
                style="@style/TextAppearance.AppCompat.Small"
                android:text="123, Karol Bagh, New Delhi"
                android:id="@+id/tvCompanyAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/tvJobTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvCompanyName"
                android:layout_marginTop="16dp"/>

        <TextView
                style="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/white"
                android:text="(1.2 kms away)"
                android:id="@+id/tvKmAway"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/tvCompanyAddress"
                app:layout_constraintStart_toEndOf="@+id/tvCompanyAddress" android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvCompanyAddress" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:text="₹ 15,000 - 20,000 per month"
                android:id="@+id/tvSalaryRange"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:layout_width="0dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/tvJobTitle"
                app:layout_constraintTop_toBottomOf="@+id/tvCompanyAddress" android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/tvKnowMore"
                android:textColor="@color/white"
                style="@style/TextAppearance.AppCompat.Caption"
                android:text="Varified Job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawablePadding="2dp"
                android:drawableStart="@drawable/ic_check_circle_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvSalaryRange" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="1.0"/>


        <View android:layout_width="match_parent" android:layout_height="1dp"
              android:layout_marginTop="8dp"
              android:background="@color/lighterGray"
              app:layout_constraintTop_toBottomOf="@+id/tvKnowMore"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="16dp"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="16dp" android:id="@+id/view"/>


        <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/profile"
                app:civ_border_width="1dp"
                app:civ_border_color="#ffffff"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/view" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="Chetan Kumar"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/profile_image" android:layout_marginStart="16dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/profile_image"
                app:layout_constraintEnd_toStartOf="@+id/callButton" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="HR, Digital Marketing Pvt. Ltd."
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                style="@style/TextAppearance.AppCompat.Caption"
                android:id="@+id/textView2"
                app:layout_constraintBottom_toBottomOf="@+id/profile_image"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/callButton"
                app:layout_constraintHorizontal_bias="0.0"/>


        <ImageButton
                android:id="@+id/callButton"
                android:background="@color/white"
                android:src="@drawable/ic_call_black_24dp"
                android:layout_width="50dp"
                android:layout_height="35dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/profile_image"
                app:layout_constraintTop_toTopOf="@+id/profile_image"/>

        <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:background="@color/white"
                android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/profile_image"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"/>

        <LinearLayout
                android:id="@+id/layoutJobDetails"
                android:background="@drawable/item_shadow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/profile_image">


            <TextView
                    android:textStyle="bold"
                    android:text="Job details"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:text="Type"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="Full Time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:text="Shift timings"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="9:00am to 6:00pm | Monday-Friday(5 days working)"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:text="Complete Address"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="Shop No. 05, Prakriti Complex, 123. Karol Bagh. New Delhi-110085"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
                android:background="@drawable/item_shadow"
                android:id="@+id/layoutRequirements"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_width="match_parent" android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@+id/layoutJobDetails"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp">

            <TextView
                    android:textStyle="bold"
                    android:text="Requirements"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/requirements"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
                android:background="@drawable/item_shadow"
                android:id="@+id/layoutInterview"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_width="match_parent" android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@+id/layoutRequirements"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="1.0">

            <TextView
                    android:textStyle="bold"
                    android:text="Interview details"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_marginBottom="6dp"
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:text="Interview Address"
                        android:layout_alignParentStart="true"
                        android:textColor="@color/colorAccent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:layout_marginBottom="6dp"
                        style="@style/TextAppearance.AppCompat.Caption"
                        android:text="(View on map)"
                        android:textColor="@color/mediumPurple"
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </RelativeLayout>

            <TextView
                    android:text="Shop No. 05, Prakriti Complex, 123. Karol Bagh. New Delhi-110085"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="6dp"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:text="No. of Openings"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
                app:layout_constraintTop_toBottomOf="@+id/layoutInterview"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:text="Posted 5 day ago"
                android:id="@+id/tvPostedOn"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintStart_toEndOf="@+id/tvLabel"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintBottom_toBottomOf="@+id/tvLabel"/>

        <TextView
                app:layout_constraintTop_toBottomOf="@+id/layoutInterview"
                app:layout_constraintStart_toStartOf="parent"
                android:text="Report"
                android:layout_marginStart="16dp"
                android:id="@+id/tvReport"
                android:textColor="@color/mediumPurple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />
        <TextView
                android:text="a problem with this job"
                android:id="@+id/tvLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/tvReport"
                app:layout_constraintBottom_toBottomOf="@+id/tvReport"
                app:layout_constraintStart_toEndOf="@+id/tvReport" android:layout_marginStart="4dp"/>


        <com.google.android.material.chip.Chip
                android:id="@+id/chipCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:chipBackgroundColor="@color/white"
                android:textColor="#0047FF"
                app:chipStrokeColor="#0047FF"
                app:chipStrokeWidth="1dp"
                app:layout_constraintEnd_toStartOf="@+id/chipContinue" android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvReport"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.chip.Chip
                android:id="@+id/chipContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textContinue"
                app:chipBackgroundColor="#0047FF"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/chipCancel"
                app:layout_constraintTop_toTopOf="@+id/chipCancel"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>